sandbox/output
PatientTest.java:17: error: cannot find symbol
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  symbol:   method clash(List<String>,int)
  location: variable patient of type Patient
1 error
